# VitaPad

./: .clangd  .gitignore  .gitmodules  README.md
.github/workflows/: test.yml
Client/: CMakeLists.txt  Makefile  ViGEm.cpp  ViGEm.h  build.bat  linux.xml  main.c  main.cpp  main.h  sock_data.cpp  uinput.c  uinput.h  vigem.c  vigem.h  windows.xml
Server/: CMakeLists.txt  Makefile
Server/source/: ctrl.c  ctrl.h  main.c  main.h
Server/src/: ctrl.cpp  ctrl.hpp  main.cpp
client/: .gitignore  CMakeLists.txt
client/client_test/: client.py
client/client_test/NetProtocol/Config/: ConfigPacket.py  TouchConfig.py
client/client_test/NetProtocol/Handshake/: Endpoint.py  Handshake.py
client/client_test/Pad/: ButtonsData.py  MainPacket.py  MotionData.py  TouchData.py  TouchReport.py  Vector3.py
client/src/: ctrl.cpp  ctrl.hpp  main.cpp  sock_data.hpp  uinput.c  uinput.h  vigem.c
cmake/: BuildFlatBuffers.cmake
common/: config.fbs  handshake.fbs  netprotocol.fbs  pad.fbs
include/: common.h  config.fbs.hpp  net_types.h  pad.fbs.hpp  types.h
server/: .pre-commit-config.yaml  CMakeLists.txt
server/src/: ctrl.cpp  ctrl.hpp  epoll.cpp  epoll.hpp  heartbeat.hpp  main.cpp  net.cpp  net.hpp
